--- a/Project Cubes/Packages/manifest.json
+++ b/Project Cubes/Packages/manifest.json
@@ -5,7 +5,9 @@
     "com.unity.cinemachine": "2.2.7",
     "com.unity.incrementalcompiler": "0.0.42-preview.21",
     "com.unity.package-manager-ui": "1.9.11",
-    "com.unity.postprocessing": "2.0.13-preview",
+    "com.unity.postprocessing": "2.0.15-preview",
+    "com.unity.probuilder": "3.0.9",
+    "com.unity.progrids": "3.0.3-preview.0",
     "com.unity.purchasing": "2.0.3",
     "com.unity.render-pipelines.core": "3.0.0-preview",
     "com.unity.render-pipelines.high-definition": "3.0.0-preview",
